complete file oranization

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,4 +1,4 @@
 make:
 	clear
-	gcc -pthread functions/threadsA.c main/processA.c -o procA
-	gcc -pthread functions/threadsB.c main/processB.c -o procB
+	gcc -pthread functions/threadsA.c functions/my_funcs.c main/processA.c -o procA
+	gcc -pthread functions/threadsB.c functions/my_funcs.c main/processB.c -o procB
